<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FiturTransaksi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--UNTUK BTN KEMBALI DAN JUDUL-->
            <RelativeLayout
                android:id="@+id/wrapper_komponen_btn_kembali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- judul halaman -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ft_btn_kembali"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/icon_default_angle_right" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Kerja Fitur Transaksi"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_1"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif1_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_2"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif2_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />

                <!-- FT 3 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_3"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif3_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />

                <!-- FT 4 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_4"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif4_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />

                <!-- FT 5 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_5"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif5_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />

                <!-- FT 6 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_6"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif6_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />

                <!-- FT 7 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFE2E5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fitur_transaksi_7"
                        android:textColor="#FA5A7D"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gif7_ft"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>