<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiturPenagihan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--UNTUK BTN KEMBALI DAN JUDUL-->
            <RelativeLayout
                android:id="@+id/wrapper_komponen_btn_kembali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- judul halaman -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fpen_btn_kembali"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/icon_default_angle_right" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Kerja Fitur Penagihan"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <!-- NOMOR 1 -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F4F6FE"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/penagihan_1"
                        android:textColor="#4B80EF"
                        android:textSize="14sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/img_fpen1"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />
                <!-- NOMOR 2 -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="#F4F6FE"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/penagihan_2"
                        android:textColor="#4B80EF"
                        android:textSize="14sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/img_fpen2"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />
                <!-- NOMOR 3 -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="#F4F6FE"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/penagihan_3"
                        android:textColor="#4B80EF"
                        android:textSize="14sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/img_fpen3"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />
                <!-- NOMOR 4 -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="#F4F6FE"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/penagihan_4"
                        android:textColor="#4B80EF"
                        android:textSize="14sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/img_fpen4"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_profile_user1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>